# COVID_modeling

./: .gitignore  .isort.cfg  Demo.ipynb  README.md  chime.py  cord.nix  counter.py  covid_by_state.py  out.txt  setup.cfg  setup.py  shell.nix  test.py
comodels/: __init__.py  penn.py  sir.py
comodels/sir/: penn.py
deprecated/: chime.py  ok.py  partee.py  states.py  stroud.py  testd.py
tests/: test_penn.py
