[metadata]
name = covid-modeling

author = David Josephs
author_email = josephsd@smu.edu
maintainer = David Josephs
maintainer_email = josephsd@smu.edu

version = 0.1.1

description = COVID-19 Modeling
long_description = file: README.md
long_description_content_type = text/markdown
keywords = COVID-19, coronavirus

url = https://github.com/josephsdavid/COVID_modeling

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.0

[tool:pytest]
addopts = --cov=./comodels --cov-report html:tests/reports/coverage-html --flake8 --ignore=docs/ --durations=3
doctest_encoding = utf-8
; ignore = hwrt/datasets/

[flake8]
max-line-length = 88
extend-ignore = E203,E501,E231,N806,N803,N802
